--- a/ci/taskcat.yml
+++ b/ci/taskcat.yml
@@ -2,8 +2,22 @@ global:
   owner: quickstart@amazon.com
   qsname: quickstart-boomi-molecule
   regions:
+    - ap-northeast-1
+    - ap-northeast-2
+    - ap-northeast-3
+    - ap-south-1
+    - ap-southeast-1
+    - ap-southeast-2
+    - ca-central-1
+    - eu-central-1
+    - eu-west-1
+    - eu-west-2
+    - eu-west-3
     - us-east-1
+    - us-east-2
+    - us-west-1
+    - us-west-2
 tests:
-  basic:
+  quickstart-boomi-molecule:
     parameter_input: params.json
     template_file: boomi-molecule-master.template.yaml
