--- a/templates/boomi-molecule-master.template.yaml
+++ b/templates/boomi-molecule-master.template.yaml
@@ -20,15 +20,13 @@ Metadata:
           - KeyPairName
           - MoleculeEBSVolume
       - Label:
-          default: "Boomi Atom Node Sizing"
+          default: "Boomi Molecule Node Sizing"
         Parameters:
           - NodeInstanceType
       - Label:
           default: "Dell Boomi Molecule Configuration"
         Parameters:
           - MoleculeClusterName
-          - HeadMoleculeInstanceType
-          - InstanceType
           - MoleculeLocalPath
           - MoleculeLocalTemp
           - BoomiAccountID
@@ -79,7 +77,7 @@ Metadata:
       BoomiPassword:
         default: Boomi password
       NodeInstanceType:
-        default: Boomi Atom instance type
+        default: Molecule node type
       MoleculeEBSVolume:
         default: Volume size for Boomi instances
       MoleculeLocalTemp:
@@ -100,8 +98,6 @@ Metadata:
         default: Molecule cluster name
       SSLCertificateArn:
         default: SSL certificate ARN
-      HeadMoleculeInstanceType:
-        default: Head molecule instance type
       AvailabilityZones:
         default: Availability zones
       HostedZoneID:
@@ -132,25 +128,6 @@ Parameters:
     Description: A public/private key pair, which allows you to connect securely to your instance after it launches.
     Type: AWS::EC2::KeyPair::KeyName
     ConstraintDescription: Must be the name of an existing Keyname
-  InstanceType:
-    Description: The instance type of the Boomi host. You can choose a different instance type from the drop-down list of instances that meet the requirements for running a Dell Boomi Atom server.
-    Type: String
-    Default: m5.xlarge
-    AllowedValues:
-      - m4.xlarge
-      - m5.xlarge
-      - r4.xlarge
-      - r5.xlarge
-      - c5.xlarge
-  HeadMoleculeInstanceType:
-    Description: Boomi Host Instance Type
-    Type: String
-    Default: m5.xlarge
-    AllowedValues:
-      - m4.xlarge
-      - m5.xlarge
-      - r4.xlarge
-      - r5.xlarge
   NodeInstanceType:
     Description: Boomi Host Instance Type
     Type: String
